Masthead controls z-index bugfix

--- a/resources/assets/client/scss/layout/_header.scss
+++ b/resources/assets/client/scss/layout/_header.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 
   @include media-breakpoint-up(md) {
     position: static;
@@ -26,9 +26,9 @@
     text-align: center;
     // padding: (3 * $base-line) 0;
 
-    @include media-breakpoint-up(md) {
+    // @include media-breakpoint-up(md) {
       // padding: (4 * $base-line) 0;
-    }
+    // }
   }
 
   .logo {
